updates to index html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		/>
 		<link
 			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
+		<link
+			rel="stylesheet"
 			href="css/style.css"
 		/>
 	</head>
@@ -91,84 +95,143 @@
 			id="about"
 		>
 			<p>
-				Hi, I'm Laura Sieck. I'm an engineer with a passion for coding and data
-				analysis. I have experience working with Python, SQL, and Tableau to
-				create data-driven solutions.
+				<img
+					src="/images/AboutPhoto.jpeg"
+					alt="laura sieck"
+					style="float: left; margin: 1%"
+				/>
+				Hi, I’m Laura! I’m a security engineer and data analyst based in
+				Alabama, with over six years of experience specializing in fraud
+				prevention, data analysis, and cybersecurity. My career began with
+				Shipt, where I've grown various roles, each reinforcing my analytical
+				and problem-solving skills. In my current position as a Security
+				Engineer, I focus on implementing proactive fraud detection systems,
+				automating workflows with Python, and collaborating with data science
+				and engineering teams to tackle security challenges.
+				<br />
+				<br />
+				I’m well-versed in tools like SQL, Python, and Tableau, which I use to
+				extract and visualize data insights that help my team make informed,
+				data-driven decisions. My experience spans from developing operational
+				policies to creating dashboards that highlight key security trends for
+				senior leadership. My passion for data analysis is complemented by my
+				certifications in Python, data science, and web development, which help
+				me stay on the cutting edge of technology.
+				<br />
+				<br />
+				Outside of work, I enjoy caring for my three dogs and one bearded
+				dragon, tending to my garden, or practicing inline skating. I also love
+				to explore new hiking trails and I'm always on the lookout for new fun
+				ways to enjoy the outdoors.
+				<br />
+				<br />
+				I’m excited to share my projects and experience through this portfolio,
+				showcasing my commitment to using data and technology to solve complex
+				problems.
 			</p>
 
-			<p>Timeline of my career</p>
+			<hr />
+			<p>Career Timeline</p>
 
-			<certifications>
-				<ul>
-					<li>placeholder</li>
-					<li>placeholder</li>
-					<li>placeholder</li>
-				</ul>
-			</certifications>
-		</div>
+			<timeline>
+				<div class="hOut">
+					<div class="hIn">
+						<div class="event">
+							<p class="eDate">April 2017</p>
+							<p class="eTxt">
+								Started working at Shipt as a Communications Specialist
+							</p>
+						</div>
+						<div class="event">
+							<p class="eDate">February 2018</p>
+							<p class="eTxt">
+								Started new role as a Shopper Success Specialist
+							</p>
+						</div>
+						<div class="event">
+							<p class="eDate">October 2018</p>
+							<p class="eTxt">Started new role as a Payments Analyst</p>
+						</div>
+						<div class="event">
+							<p class="eDate">April 2020</p>
+							<p class="eTxt">Promoted to Senior Payments Analyst</p>
+						</div>
+						<div class="event">
+							<p class="eDate">February 2022</p>
+							<p class="eTxt">Started new role as Cyber Fraud Analyst</p>
+						</div>
+						<div class="event">
+							<p class="eDate">July 2023</p>
+							<p class="eTxt">Promoted to Security Engineer (current role)</p>
+						</div>
+					</div>
+				</div>
+			</timeline>
 
-		<div
-			class="container"
-			id="portfolio"
-		>
-			<div>
-				<h3 id="python">Python</h3>
-				<p>description</p>
+			<hr />
+			<div
+				class="container"
+				id="portfolio"
+			>
+				<div>
+					<h3 id="python">Python</h3>
+					<p>description</p>
+				</div>
+				<hr />
+				<div>
+					<h3 id="sql">SQL</h3>
+					<p>description</p>
+				</div>
+				<hr />
+				<div>
+					<h3 id="tableau">Tableau</h3>
+					<p>description</p>
+					<p>
+						Check out my Tableau profile
+						<a
+							href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
+							target="_blank"
+							>here</a
+						>.
+					</p>
+				</div>
 			</div>
 			<hr />
-			<div>
-				<h3 id="sql">SQL</h3>
-				<p>description</p>
-			</div>
-			<hr />
-			<div>
-				<h3 id="tableau">Tableau</h3>
-				<p>description</p>
-				<p>
-					Check out my Tableau profile
-					<a
-						href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
-						target="_blank"
-						>here</a
-					>.
-				</p>
-			</div>
-		</div>
-		<hr />
 
-		<div
-			class="container"
-			id="contact"
-		>
-			<p>This is how to contact me</p>
+			<div
+				class="container"
+				id="contact"
+			>
+				<h2>Contact Me</h2>
 
-			<h2>Contact Me</h2>
-			<ul>
-				<li>
-					<i>email</i>
-					<a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a>
-				</li>
-				<li>
-					<i>link</i>
-					<a
-						href="https://www.linkedin.com/in/laurasieck/"
-						target="_blank"
-						>LinkedIn</a
-					>
-				</li>
+				<i class="material-icons">email</i>
+				<a
+					href="mailto:sieck519@gmail.com"
+					class="contactlinks"
+				>
+					sieck519@gmail.com</a
+				>
 				<br />
-			</ul>
-		</div>
-
-		<hr />
-
-		<footer class="footer">
-			<div class="content has-text-centered">
-				<p>
-					Created and Maintained by Laura Sieck. Licensed
-					<a href="https://opensource.org/license/mit">MIT</a>.
-				</p>
+				<i class="material-icons">link</i>
+				<a
+					href="https://www.linkedin.com/in/laurasieck/"
+					target="_blank"
+					class="contactlinks"
+					>LinkedIn</a
+				>
+				<br />
 			</div>
-		</footer>
+
+			<hr />
+
+			<footer class="footer">
+				<div class="content has-text-centered">
+					<p style="font-style: italic;">
+						Created and Maintained by Laura Sieck
+						<br> last updated October 2024
+					</p>
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
