--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		>
 			<p>
 				<img
-					src="/images/aboutphoto.JPG"
+					src="images/aboutphoto.JPG"
 					alt="laura sieck"
 					style="float: left; margin: 1%"
 				/>
