--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
 						</a>
 
 						<div class="navbar-item has-dropdown is-hoverable">
-							<a
-								class="navbar-link"
-								href="#portfolio"
-							>
-								Projects
-							</a>
+							<a class="navbar-link"> Projects </a>
 
 							<div class="navbar-dropdown">
+								<a
+									class="navbar-item"
+									href="#tableau"
+								>
+									Tableau
+								</a>
 								<a
 									class="navbar-item"
 									href="#python"
@@ -61,12 +62,6 @@
 									href="#sql"
 								>
 									SQL
-								</a>
-								<a
-									class="navbar-item"
-									href="#tableau"
-								>
-									Tableau
 								</a>
 							</div>
 						</div>
@@ -169,34 +164,331 @@
 			</timeline>
 
 			<hr />
-			<div
-				class="container"
+
+			<!-- tableau highlights -->
+			<section
+				class="portfolio-section"
 				id="portfolio"
 			>
-				<div>
-					<h3 id="python">Python</h3>
-					<p>description</p>
+				<h2 id="tableau">Tableau Dashboards</h2>
+				<p>
+					Check out my Tableau profile
+					<a
+						href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
+						target="_blank" style="font-weight: bold;"
+						>here</a
+					>.
+				</p>
+
+				<div class="portfolio-container">
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/tableau-electricity.JPG"
+							alt="placeholder"
+						/>
+						<h3>Tableau</h3>
+						<p class="portfoliosubtext">Patterns in electricity supply and demand</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://public.tableau.com/views/cac115_story_16463586738860/Electricity?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
 				</div>
-				<hr />
-				<div>
-					<h3 id="sql">SQL</h3>
-					<p>description</p>
+			</section>
+
+			<!-- python projects -->
+
+			<section
+				class="portfolio-section"
+				id="portfolio"
+			>
+				<h2 id="python">Python Projects</h2>
+
+				<div class="portfolio-container">
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
 				</div>
-				<hr />
-				<div>
-					<h3 id="tableau">Tableau</h3>
-					<p>description</p>
-					<p>
-						Check out my Tableau profile
-						<a
-							href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
-							target="_blank"
-							>here</a
-						>.
-					</p>
+			</section>
+
+			<!-- sql -->
+
+			<section
+				class="portfolio-section"
+				id="portfolio"
+			>
+				<h2 id="sql">SQL Queries</h2>
+
+				<div class="portfolio-container">
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<img
+							class="portfolio-image"
+							src="images/aboutphoto.JPG"
+							alt="placeholder"
+						/>
+						<h3>placeholder</h3>
+						<p class="portfoliosubtext">description of project</p>
+						<hr />
+						<p class="portfoliosubtext">
+							<a
+								class="portfolio-link"
+								href="https://lsieck519.github.io/Password-Generator/"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
 				</div>
-			</div>
-			<hr />
+			</section>
 
 			<div
 				class="container"
@@ -224,11 +516,13 @@
 
 			<hr />
 
+
 			<footer class="footer">
 				<div class="content has-text-centered">
-					<p style="font-style: italic;">
+					<p style="font-style: italic">
 						Created and Maintained by Laura Sieck
-						<br> last updated October 2024
+						<br />
+						last updated October 2024
 					</p>
 				</div>
 			</footer>
