--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 			</nav>
 		</section>
 
-		<hr />
+		<hr class="top-line" />
 
-		<hr />
+		<hr class="top-line" />
 
 		<div
 			class="container"
@@ -126,7 +126,7 @@
 			</p>
 
 			<hr />
-			<p>Career Timeline</p>
+			<h1 class="content has-text-centered">Career Timeline</h1>
 
 			<timeline>
 				<div class="hOut">
@@ -166,34 +166,26 @@
 			<hr />
 
 			<!-- tableau highlights -->
-			<section
-				class="portfolio-section"
-				id="portfolio"
-			>
+			<section class="portfolio-section">
 				<h2 id="tableau">Tableau Dashboards</h2>
 				<p>
 					Check out my Tableau profile
 					<a
 						href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
-						target="_blank" style="font-weight: bold;"
+						target="_blank"
+						style="font-weight: bold"
 						>here</a
 					>.
 				</p>
 
 				<div class="portfolio-container">
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/tableau-electricity.JPG"
-							alt="placeholder"
-						/>
-						<h3>Tableau</h3>
-						<p class="portfoliosubtext">Patterns in electricity supply and demand</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://public.tableau.com/views/cac115_story_16463586738860/Electricity?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -201,18 +193,12 @@
 					</div>
 
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -220,86 +206,31 @@
 					</div>
 
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
-						<hr />
-						<p class="portfoliosubtext">
-							<a
-								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
-						<hr />
-						<p class="portfoliosubtext">
-							<a
-								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
 						</p>
 					</div>
 				</div>
-			</section>
 
-			<!-- python projects -->
+				<!-- python -->
 
-			<section
-				class="portfolio-section"
-				id="portfolio"
-			>
-				<h2 id="python">Python Projects</h2>
+				<h2 id="python">Python</h2>
 
 				<div class="portfolio-container">
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -307,18 +238,12 @@
 					</div>
 
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -326,86 +251,30 @@
 					</div>
 
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
-						<hr />
-						<p class="portfoliosubtext">
-							<a
-								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
-						<hr />
-						<p class="portfoliosubtext">
-							<a
-								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
 						</p>
 					</div>
 				</div>
-			</section>
 
-			<!-- sql -->
+				<!-- sql -->
 
-			<section
-				class="portfolio-section"
-				id="portfolio"
-			>
-				<h2 id="sql">SQL Queries</h2>
-
+				<h2 id="sql">SQL</h2>
 				<div class="portfolio-container">
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">2024 Retail Fraud Loss</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -413,18 +282,12 @@
 					</div>
 
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -432,56 +295,12 @@
 					</div>
 
 					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
-						<p class="portfoliosubtext">
+						<p>
 							<a
 								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
-						<hr />
-						<p class="portfoliosubtext">
-							<a
-								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<img
-							class="portfolio-image"
-							src="images/aboutphoto.JPG"
-							alt="placeholder"
-						/>
-						<h3>placeholder</h3>
-						<p class="portfoliosubtext">description of project</p>
-						<hr />
-						<p class="portfoliosubtext">
-							<a
-								class="portfolio-link"
-								href="https://lsieck519.github.io/Password-Generator/"
+								href="https://github.com/lsieck519"
 								target="_blank"
 								>View</a
 							>
@@ -489,36 +308,35 @@
 					</div>
 				</div>
 			</section>
-
-			<div
-				class="container"
-				id="contact"
-			>
-				<h2>Contact Me</h2>
-
-				<i class="material-icons">email</i>
-				<a
-					href="mailto:sieck519@gmail.com"
-					class="contactlinks"
-				>
-					sieck519@gmail.com</a
-				>
-				<br />
-				<i class="material-icons">link</i>
-				<a
-					href="https://www.linkedin.com/in/laurasieck/"
-					target="_blank"
-					class="contactlinks"
-					>LinkedIn</a
-				>
-				<br />
-			</div>
 
 			<hr />
 
-
 			<footer class="footer">
 				<div class="content has-text-centered">
+					<div
+						class="container"
+						id="contact"
+					>
+						<h4>Contact Me</h4>
+
+						<i class="material-icons">email</i>
+						<a
+							href="mailto:sieck519@gmail.com"
+							class="contactlinks"
+						>
+							sieck519@gmail.com</a
+						>
+						<br />
+						<i class="material-icons">link</i>
+						<a
+							href="https://www.linkedin.com/in/laurasieck/"
+							target="_blank"
+							class="contactlinks"
+							>LinkedIn</a
+						>
+						<br />
+						<br />
+					</div>
 					<p style="font-style: italic">
 						Created and Maintained by Laura Sieck
 						<br />
