--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			<hr />
 
 			<!-- tableau highlights -->
-			<section class="portfolio-section">
+			<section class="portfolio-section" id="portfolio">
 				<h2 id="tableau">Tableau Dashboards</h2>
 				<p>
 					Check out my Tableau profile
