--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
 			<hr />
 
 			<!-- tableau highlights -->
-			<section class="portfolio-section" id="portfolio">
+			<section
+				class="portfolio-section"
+				id="portfolio"
+			>
 				<h2 id="tableau">Tableau Dashboards</h2>
 				<p>
 					Check out my Tableau profile
@@ -179,6 +182,19 @@
 				</p>
 
 				<div class="portfolio-container">
+					<div class="portfolio-card">
+						<p class="portfoliosubtext">Name of project</p>
+						<hr />
+						<p>
+							<a
+								class="portfolio-link"
+								href="https://github.com/lsieck519"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
 					<div class="portfolio-card">
 						<p class="portfoliosubtext">Name of project</p>
 						<hr />
@@ -262,6 +278,19 @@
 							>
 						</p>
 					</div>
+
+					<div class="portfolio-card">
+						<p class="portfoliosubtext">Name of project</p>
+						<hr />
+						<p>
+							<a
+								class="portfolio-link"
+								href="https://github.com/lsieck519"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
 				</div>
 
 				<!-- sql -->
@@ -270,6 +299,19 @@
 				<div class="portfolio-container">
 					<div class="portfolio-card">
 						<p class="portfoliosubtext">2024 Retail Fraud Loss</p>
+						<hr />
+						<p>
+							<a
+								class="portfolio-link"
+								href="https://github.com/lsieck519"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<p class="portfoliosubtext">Name of project</p>
 						<hr />
 						<p>
 							<a
