--- a/index.html
+++ b/index.html
@@ -95,29 +95,26 @@
 					alt="laura sieck"
 					style="float: left; margin: 1%"
 				/>
-				Hi, I’m Laura! I’m a security engineer and data analyst based in
-				Alabama, with over six years of experience specializing in fraud
-				prevention, data analysis, and cybersecurity. My career began with
-				Shipt, where I've grown various roles, each reinforcing my analytical
-				and problem-solving skills. In my current position as a Security
-				Engineer, I focus on implementing proactive fraud detection systems,
+				Hi, I’m Laura! I’m a Security Engineer with an appreciation for clean data. I'm based in Alabama with 
+				six years of experience specializing in fraud prevention, data analysis, and cybersecurity.
+				My career began with Shipt, where I've grown in various roles, each reinforcing my analytical
+				and problem-solving skills. In my current role as a Security
+				Engineer, I focus on implementing proactive fraud detection systems with Golang,
 				automating workflows with Python, and collaborating with data science
 				and engineering teams to tackle security challenges.
 				<br />
 				<br />
-				I’m well-versed in tools like SQL, Python, and Tableau, which I use to
+				I’m well-versed in analysis tools like SQL, Python, and Tableau, which I use to
 				extract and visualize data insights that help my team make informed,
-				data-driven decisions. My experience spans from developing operational
-				policies to creating dashboards that highlight key security trends for
-				senior leadership. My passion for data analysis is complemented by my
-				certifications in Python, data science, and web development, which help
-				me stay on the cutting edge of technology.
+				data-driven decisions. My passion for data analysis is complemented by my
+				certifications in topics ranging from data science to full stack web development.
 				<br />
 				<br />
-				Outside of work, I enjoy caring for my three dogs and one bearded
-				dragon, tending to my garden, or practicing inline skating. I also love
-				to explore new hiking trails and I'm always on the lookout for new fun
-				ways to enjoy the outdoors.
+				Outside of tech, I enjoy working on projects around my house, tending to my garden,
+				and practicing inline skating. I love to explore new hiking trails 
+				and I'm always on the lookout for new fun ways to enjoy the outdoors. 
+				I work from home so I get to spend most of my time hanging out with my 
+				three dogs and bearded dragon. 
 				<br />
 				<br />
 				I’m excited to share my projects and experience through this portfolio,
