--- a/index.html
+++ b/index.html
@@ -95,11 +95,10 @@
 					alt="laura sieck"
 					style="float: left; margin: 1%"
 				/>
-				Hi, I’m Laura! I’m a Security Engineer with an appreciation for clean data. I'm based in Alabama with 
-				six years of experience specializing in fraud prevention, data analysis, and cybersecurity.
-				My career began with Shipt, where I've grown in various roles, each reinforcing my analytical
-				and problem-solving skills. In my current role as a Security
-				Engineer, I focus on implementing proactive fraud detection systems with Golang,
+				Hi, I’m Laura! I'm based in Alabama with six years of experience specializing in fraud prevention, data analysis, and cybersecurity.
+				My career began with Shipt, where I grew in various roles, each reinforcing my analytical
+				and problem-solving skills. In my most recente role as a Security
+				Engineer, I focused on implementing proactive fraud detection systems with Golang,
 				automating workflows with Python, and collaborating with data science
 				and engineering teams to tackle security challenges.
 				<br />
@@ -111,15 +110,10 @@
 				<br />
 				<br />
 				Outside of tech, I enjoy working on projects around my house, tending to my garden,
-				and practicing inline skating. I love to explore new hiking trails 
+				and taking care of my three dogs. I love to explore new hiking trails 
 				and I'm always on the lookout for new fun ways to enjoy the outdoors. 
-				I work from home so I get to spend most of my time hanging out with my 
-				three dogs and bearded dragon. 
+			
 				<br />
-				<br />
-				I’m excited to share my projects and experience through this portfolio,
-				showcasing my commitment to using data and technology to solve complex
-				problems.
 			</p>
 
 			<hr />
@@ -155,6 +149,10 @@
 						<div class="event">
 							<p class="eDate">July 2023</p>
 							<p class="eTxt">Promoted to Security Engineer (current role)</p>
+						</div>
+							<div class="event">
+							<p class="eDate">November 2024</p>
+							<p class="eTxt">Left role as Security Engineer</p>
 						</div>
 					</div>
 				</div>
