--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				/>
 				Hi, I’m Laura! I'm based in Alabama with six years of experience specializing in fraud prevention, data analysis, and cybersecurity.
 				My career began with Shipt, where I grew in various roles, each reinforcing my analytical
-				and problem-solving skills. In my most recente role as a Security
+				and problem-solving skills. In my most recent role as a Security
 				Engineer, I focused on implementing proactive fraud detection systems with Golang,
 				automating workflows with Python, and collaborating with data science
 				and engineering teams to tackle security challenges.
