--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
 
 				<div class="portfolio-container">
 					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
+						<p class="portfoliosubtext">Video Games Sales 1980-2020</p>
 						<hr />
 						<p>
 							<a
 								class="portfolio-link"
-								href="https://github.com/lsieck519"
+								href="https://public.tableau.com/views/VideoGameSalesTrends_17338760419000/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
 								target="_blank"
 								>View</a
 							>
@@ -191,12 +191,12 @@
 					</div>
 
 					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
+						<p class="portfoliosubtext">Electricity Supply and Demand</p>
 						<hr />
 						<p>
 							<a
 								class="portfolio-link"
-								href="https://github.com/lsieck519"
+								href="https://public.tableau.com/views/cac115_story_16463586738860/Electricity?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
 								target="_blank"
 								>View</a
 							>
@@ -377,7 +377,7 @@
 					<p style="font-style: italic">
 						Created and Maintained by Laura Sieck
 						<br />
-						last updated October 2024
+						last updated December 2024
 					</p>
 				</div>
 			</footer>
