--- a/index.html
+++ b/index.html
@@ -95,24 +95,27 @@
 					alt="laura sieck"
 					style="float: left; margin: 1%"
 				/>
-				Hi, I’m Laura! I'm based in Alabama with six years of experience specializing in fraud prevention, data analysis, and cybersecurity.
-				My career began with Shipt, where I grew in various roles, each reinforcing my analytical
-				and problem-solving skills. In my most recent role as a Security
-				Engineer, I focused on implementing proactive fraud detection systems with Golang,
-				automating workflows with Python, and collaborating with data science
-				and engineering teams to tackle security challenges.
+				Hi, I’m Laura! I'm based in Alabama with six years of experience
+				specializing in fraud prevention, data analysis, and cybersecurity. My
+				career began with Shipt, where I grew in various roles, each reinforcing
+				my analytical and problem-solving skills. In my most recent role as a
+				Security Engineer, I focused on implementing proactive fraud detection
+				systems with Golang, automating workflows with Python, and collaborating
+				with data science and engineering teams to tackle security challenges.
 				<br />
 				<br />
-				I’m well-versed in analysis tools like SQL, Python, and Tableau, which I use to
-				extract and visualize data insights that help my team make informed,
-				data-driven decisions. My passion for data analysis is complemented by my
-				certifications in topics ranging from data science to full stack web development.
+				I’m well-versed in analysis tools like SQL, Python, and Tableau, which I
+				use to extract and visualize data insights that help my team make
+				informed, data-driven decisions. My passion for data analysis is
+				complemented by my certifications in topics ranging from data science to
+				full stack web development.
 				<br />
 				<br />
-				Outside of tech, I enjoy working on projects around my house, tending to my garden,
-				and taking care of my three dogs. I love to explore new hiking trails 
-				and I'm always on the lookout for new fun ways to enjoy the outdoors. 
-			
+				Outside of tech, I enjoy working on projects around my house, tending to
+				my garden, and taking care of my three dogs. I love to explore new
+				hiking trails and I'm always on the lookout for new fun ways to enjoy
+				the outdoors.
+
 				<br />
 			</p>
 
@@ -125,34 +128,53 @@
 						<div class="event">
 							<p class="eDate">April 2017</p>
 							<p class="eTxt">
-								Started working at Shipt as a Communications Specialist
+								Started working at Shipt as a Communications Specialist <br />
+								(10 months)
 							</p>
 						</div>
 						<div class="event">
 							<p class="eDate">February 2018</p>
 							<p class="eTxt">
-								Started new role as a Shopper Success Specialist
+								Started new role as a Shopper Success Specialist <br />
+								(8 months)
 							</p>
 						</div>
 						<div class="event">
 							<p class="eDate">October 2018</p>
-							<p class="eTxt">Started new role as a Payments Analyst</p>
+							<p class="eTxt">
+								Started new role as a Payments Analyst <br />
+								(1 year + 6 months)
+							</p>
 						</div>
 						<div class="event">
 							<p class="eDate">April 2020</p>
-							<p class="eTxt">Promoted to Senior Payments Analyst</p>
+							<p class="eTxt">
+								Promoted to Senior Payments Analyst <br />
+								(1 year + 10 months)
+							</p>
 						</div>
 						<div class="event">
 							<p class="eDate">February 2022</p>
-							<p class="eTxt">Started new role as Cyber Fraud Analyst</p>
+							<p class="eTxt">
+								Started new role as Cyber Fraud Analyst <br />
+								(1 year + 5 months)
+							</p>
 						</div>
 						<div class="event">
 							<p class="eDate">July 2023</p>
-							<p class="eTxt">Promoted to Security Engineer (current role)</p>
+							<p class="eTxt">
+								Promoted to Security Engineer <br />
+								(1 year + 4 months)
+							</p>
 						</div>
-							<div class="event">
+						<div class="event">
 							<p class="eDate">November 2024</p>
 							<p class="eTxt">Left role as Security Engineer</p>
+						</div>
+
+						<div class="event">
+							<p class="eDate">Current Day</p>
+							<p class="eTxt">Working on a career switch from engineering to data analytics!</p>
 						</div>
 					</div>
 				</div>
