--- a/index.html
+++ b/index.html
@@ -51,18 +51,6 @@
 								>
 									Tableau
 								</a>
-								<a
-									class="navbar-item"
-									href="#python"
-								>
-									Python
-								</a>
-								<a
-									class="navbar-item"
-									href="#sql"
-								>
-									SQL
-								</a>
 							</div>
 						</div>
 					</div>
@@ -197,8 +185,36 @@
 						>here</a
 					>.
 				</p>
+				
 
 				<div class="portfolio-container">
+
+										<div class="portfolio-card">
+						<p class="portfoliosubtext">Sales Dashboard</p>
+						<hr />
+						<p>
+							<a
+								class="portfolio-link"
+								href="https://haproxy-traffic-splitter/views/SalesDashboard_17374106621060/SalesDashboard?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+
+					<div class="portfolio-card">
+						<p class="portfoliosubtext">HR Dashboard</p>
+						<hr />
+						<p>
+							<a
+								class="portfolio-link"
+								href="https://haproxy-traffic-splitter/views/HRDashboard_17367843720520/HRSummary?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+								target="_blank"
+								>View</a
+							>
+						</p>
+					</div>
+					
 					<div class="portfolio-card">
 						<p class="portfoliosubtext">Video Games Sales 1980-2020</p>
 						<hr />
@@ -225,147 +241,8 @@
 						</p>
 					</div>
 
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
 				</div>
 
-				<!-- python -->
-
-				<h2 id="python">Python</h2>
-
-				<div class="portfolio-container">
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-				</div>
-
-				<!-- sql -->
-
-				<h2 id="sql">SQL</h2>
-				<div class="portfolio-container">
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">2024 Retail Fraud Loss</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Name of project</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://github.com/lsieck519"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-				</div>
 			</section>
 
 			<hr />
